argocd/homelab/forgejo/rehearsal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-rehearsal
  namespace: forgejo-rehearsal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: forgejo-rehearsal
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
