argocd/homelab/forgejo/rehearsal/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: forgejo-rehearsal
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
spec:
  podSelector: {}
  policyTypes: ['Ingress', 'Egress']
  ingress: []
  egress: []
